# basic-text-editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: errors.h  rc.h  window_manager.h
src/: main.cpp  window_manager.cpp
